# Artificial-intelligence

./: .gitignore  PyGAD.md  README.md  bloom.md  dreambooth.md  easyga.md  galactica.md  index.md  llm_conditional.drawio  llm_general.drawio  models.md  pyeasyga.md  stable-diffusion-inpainting.md  stable-diffusion-prompts.md  stablediffusion.md  text-classification.md  texturalinversion
Classification/Syslog/: OneHotFlow.afdesign  OneHotFlow.afdesign~lock~  log_analysis_with_machine_learning.md  syslog_analysis.py  syslog_analysis_pytorch.py  syslog_analysis_tfid_oversample.py  syslog_analysis_tfidf.py  syslog_classification.py  syslog_classification_tfid.py  syslog_cleanup.py  syslog_count_lines.py  syslog_gridsearch.py  syslog_gridsearch_oversampling.py  syslog_overfitting.py  syslog_pytorch_analysis.py  syslog_word_analyser.py
Embedded/: Build_Arduino_TensorFlowLite.sh  README.md  convert_data.sh  generate_maintenance_data.py  load_maintenance_data.py  load_maintenance_linear_regression.py  load_maintenance_lr_simplified.py  load_maintenance_random_forest.py  load_weather_data.py  prepare_maintenance_data_for_quantization.py  weather_predictor.py
Embedded/Diagrams/: EdgeAILinux.afphoto  MilkVFaceDetection.afdesign  MilkVFaceDetection.afdesign~lock~  quantization.afdesign
Embedded/GoogleDriveExample/: authorise_drive.py  gdrive.py
Embedded/LuckFox_Pico_Ultra_RV1106/examples/preventive_maintenance/: CMakeLists.txt  build.sh  clean.sh  luckfox_toolchain.cmake  main.c
Embedded/LuckFox_Pico_Ultra_RV1106/examples/rknn_mobilenet_demo/: CMakeLists.txt  README.md  run_demo.sh
Embedded/LuckFox_Pico_Ultra_RV1106/examples/rknn_mobilenet_demo/install/rknn_mobilenet_demo_Linux/: rknn_mobilenet_demo  rknn_mobilenet_nhwc_demo
Embedded/LuckFox_Pico_Ultra_RV1106/examples/rknn_mobilenet_demo/src/: main.cc
Embedded/LuckFox_Pico_Ultra_RV1106/examples/rknn_yolov5_demo/: BuildingAndCompiling.md  CMakeLists.txt  ReadMe.md  build-linux_RV1106.sh  cleanMe.sh  luckfox_toolchain.cmake  run_example.sh
Embedded/LuckFox_Pico_Ultra_RV1106/examples/rknn_yolov5_demo/install/rknn_yolov5_demo_Linux/: rknn_yolov5_demo  run_demo.sh
Embedded/LuckFox_Pico_Ultra_RV1106/examples/rknn_yolov5_demo/src/: postprocess.cc
Embedded/LuckFox_Pico_Ultra_RV1106/examples/still_capture/: CMakeLists.txt  build.sh  clean.sh  luckfox_toolchain.cmake  main.cc
Embedded/MilkV_Duos/: ReadMe.md
Embedded/MilkV_Duos/Applications/gpio_example/: CMakeLists.txt  buildMe.sh  cleanMe.sh
Embedded/MilkV_Duos/Applications/gpio_example/Scripts/: gpio_output_flash.sh  gpio_turn_off_builtin_led.sh  gpio_turn_off_led.sh  gpio_turn_on_builtin_led.sh  gpio_turn_on_led.sh
Embedded/MilkV_Duos/Applications/gpio_example/build_release/: sysfs_gpio_cli
Embedded/MilkV_Duos/Applications/gpio_example/sysfs_examples/: sysfs_enable_builtin_led.c  sysfs_gpio.c  sysfs_gpio.h  sysfs_gpio_cli.c  sysfs_gpio_mirror.c  sysfs_set_pin_value.c
Embedded/MilkV_Duos/Applications/gpio_example/wiringx_examples/: gpio_enable_builtin_led.c  gpio_enable_led.c  gpio_example.c  gpio_example_input.c  gpio_example_output.c
Embedded/PreventativeMaintenance/: ReadMe.md  convert_data.sh  convert_to_tflite_with_quantization.py  convert_to_tflite_without_quantization.py  evaluate_non_quantized_tflite_model.py  evaluate_tensorflow_model.py  evaluate_tensorflow_model_single.py  evaluate_tflite_model.py  generate_rknn_dataset.py  generate_synthetic_maintenance_data.py  inspect_tflite_model.py  predictive_lr_maintenace_model.py  predictive_maintenance_model.py  prepare_maintenance_data_for_quantization.py
Embedded/STM32/: ReadMe.md  stm321.defconfig  write_sdcard_image.sh
Embedded/STM32/examples/preventative_maintenance/: CMakeLists.txt  README.md  buildMe.sh  preventative_maintenance.cc
Embedded/models/: model.h  preventive_forecast.keras  preventive_forecast.tflite
IOT/:  remaining_useful_life_data_description.md  DataAnalytics.md  dataset.csv  measurement.ipynb  measurement.py  measurement_preventative_maintenance.py  measurement_preventative_maintenance_part_one.py  measurement_preventative_maintenance_part_two.py  measurement_weather.py  normal_distribution.py  rain.py  voltage_data.csv  xgboost_example.py
IOT/markdown/: embeddedAI.md  preventative_maintenance_analytics.md  preventative_maintenance_data_description.md  weather_data_analytics.md
IOT/preventative_maintenance/: data_structures.py  hello_world.py  preprocess_data.py  preventative_maintenance.py  seasonal_and_trend_decomposition.py
IOT/tool_wear/: tool_wear.py  xgboost_tool_wear.py
IOT/weather/: measurement_weather.py  rain.py
LLMs/: ReadMe.md
LLMs/CustomLLM/: ReadMe.md  create_custom_model.py  gpt2eval.py  update_custom_model.py
ObjectDetection/Yolo/: ReadMe.md
ObjectDetection/Yolo/C/: BuildForx86.sh  CMakeCache.txt  CMakeLists.txt  CleanMe.sh  Makefile  ReadMe.md  cmake_install.cmake  convert_normalised_to_pixels.py  main.c  main2.c  output.txt  process_raw_predictions.py  run.sh  run_car_test.sh  yolo_example
ObjectDetection/Yolo/C/RV1106/: BuildForRV1106.sh  CMakeLists.txt  CleanMe.sh  ReadMe.md  main.c  run_example.sh
ObjectDetection/Yolo/C/RV1106_NPU/: ReadMe.md  luckfox_toolchain.cmake
ObjectDetection/Yolo/C/RV1106_NPU/include/: postprocess.h
ObjectDetection/Yolo/C/RV1106_NPU/install/rknn_yolov5_demo_Linux/: rknn_yolov5_demo
ObjectDetection/Yolo/C/RV1106_NPU/src/: main.cc
ObjectDetection/Yolo/C/STM32/: BuildForSTM32.sh  ReadMe.md  main.c
ObjectDetection/Yolo/CPP/: CMakeLists.txt  CleanMe.sh  ReadMe.md  tiny_yolo_boxes.cpp  tiny_yolo_image.cpp  tiny_yolo_realtime.cpp  yolo_boxes.cpp  yolo_image.cpp  yolo_realtime.cpp
ObjectDetection/Yolo/CPP/STM32/: CMakeLists.txt  CleanMe.sh  ReadMe.md  stm32_toolchain.cmake  tiny_yolo_image.cpp  tiny_yolo_image_test.cpp
Ollama/: ReadMe.md
Ollama/DocumentGeneration/: generated_report.md  markdown_generation.py
Ollama/RAG/: check_cuda.py  (+41 more)
Resources/: darknet_embedded.afphoto
TextStyleTransfer/: ReadMe.md  glossary.md  model_operation.drawio  removing_subjectivity.md  style_transfer.md
docs/: index.html
(+380 files in other folders)
